# reachy_screen

./: CMakeLists.txt  README.md  error.txt  package.xml  screen_app.sublime-project  screen_app.sublime-workspace  setup.cfg  setup.py
.metals/: metals.h2.db
install/: local_setup.sh  setup.sh
log/: latest_build
new_screen/: __init__.py  screen_calibration.py  screen_getpoints.py  screen_info.py  screen_processing.py  screen_subscriber.py  screen_touch.py
reachy_screen/: run_app.py  screen_calibration.py  screen_processing.py  screen_subscriber.py  screen_touch.py
reachy_screen.egg-info/: SOURCES.txt  top_level.txt
reachy_screen/errors/: 12.06 - 17.27.txt  12.13 - 16:17.txt  reachy_calibration_not_working.txt
reachy_screen/outdated/: head_following_arm.py  otis_circle.py  otis_test.py  touch_screen_mirroring.py
reachy_screen/reachy_screen.egg-info/: PKG-INFO  SOURCES.txt
reachy_screen/screen/: screen_bilateration.py  screen_calibration.py  screen_getpoints.py  screen_info.py  screen_new_trilateration.py  screen_processing.py  screen_touch.py  screen_triangulation.py  screen_trilateration.py  testing_backwards_kin.py
reachy_screen/tests/: test.py  test2.py
screen_app/: CMakeLists.txt  README.md  __init__.py  run_app.py  screen_app.sublime-project  screen_subscriber.py
screen_app/screen_app/: screen_subscriber.py
scripts/: run_app.py
src/screen_app/: visual.py
testing_results/: 0_testing_recap.xlsx  single_point_no_rest.txt  single_point_with_rest.txt  two_point_no_rest.txt
touchscreen_ws/install/: local_setup.sh  setup.sh
(+121 files in other folders)
